Toolbar: Fix sync icon button alignment

--- a/src/toolbar.less
+++ b/src/toolbar.less
@@ -22,6 +22,13 @@ body:focus-within {
     .icon-button();
 }
 
+#launcher-pane .sync-status {
+    span.sync-status-icon {
+        top: 0 !important;
+        line-height: 31px;
+    }
+}
+
 #launcher-pane > div.component:not(.dropdown):not(.spacer) {
     flex-direction: row !important;
 }
